# pediatric-care-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FEATURES.md  GLOSSARY.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
app/: __init__.py  config.py  main.py  observability.py  providers.py  schemas.py  security.py
app/routers/: auth.py  clinical.py  compliance.py  intelligence.py
app/services/: auth.py  compliance.py  db.py  knowledge_graph.py  predictor.py  stages.py  store.py
data/: symptom_disease.csv
docs/: PRD.md  README.md  TICKETS.md  WORKLOG.md  accessibility.md  api-reference.md  architecture.md  data-model.md  definition-of-done.md  deployment.md  disaster-recovery.md  feature-backlog.md  incident-response.md  merge-rationale.md  monitoring-observability.md  original-repo-parity.md  privacy-compliance.md  release-process.md  roadmap.md  runbook.md  test-strategy.md  threat-model.md  ui-ux-spec.md
docs/adr/: 0001-merge-medical-research-and-pediatrics.md  0002-desktop-with-tauri-not-flutter.md  (+2 more)
eval/: cases.yaml  run_eval.py
scripts/: generate_data.py
specs/: appointments.md  auth.md  doctors.md  growth-stages.md  knowledge-graph.md  medical-records.md  patients.md  symptom-checker.md
tests/: conftest.py  test_api.py
web/: .env.example  .gitignore  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
web/app/: layout.tsx  (+2 more)
(+25 files in other folders)
